# BilliardsApp

./: Ball.cpp  Ball.hpp  CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.hpp  README.md  main.cpp
docs/: step1.md  step2.md
tests/: test_Ball.cpp
